--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "ed-address-frontend",
+  "name": "hopansh gahlot",
   "version": "1.0.0",
-  "description": "ed address frontend",
+  "description": "hopansh gahlot's portfolio",
   "main": "index.js",
   "scripts": {
     "build": "webpack --mode production",
