package name updated

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "hopansh gahlot",
+  "name": "hopansh-gahlot",
   "version": "1.0.0",
   "description": "hopansh gahlot's portfolio",
   "main": "index.js",
